traces/bug_387.txt
examples++-load/DxWriter.cpp:351: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/DxWriter.cpp:351:1: initialization of callDoLoadInit
349.     //atype< myType * >()->Add("(","",new OneOperator3_<myType_uv,myType *,double,double  >(set_myType_uv));
350.   }
351. > LOADFUNC(Load_Init)

examples++-load/DxWriter.cpp:351:1: call to DoLoadInit
349.     //atype< myType * >()->Add("(","",new OneOperator3_<myType_uv,myType *,double,double  >(set_myType_uv));
350.   }
351. > LOADFUNC(Load_Init)

examples++-load/DxWriter.cpp:351:1: call to addInitFunct
  349.     //atype< myType * >()->Add("(","",new OneOperator3_<myType_uv,myType *,double,double  >(set_myType_uv));
  350.   }
  351. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
